--- a/FlowersAndBushes/FlowersAndBushes/Views/Cliente/Crear.cshtml
+++ b/FlowersAndBushes/FlowersAndBushes/Views/Cliente/Crear.cshtml
@@ -1,7 +1,87 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Crear";
 }
 
-<h2>Crear</h2>
+<br />
 
+<div class="panel panel-primary">
+    <div class="panel-heading"> Registro de Clientes</div>
+    <div class="panel-body">
+
+        <form role="form">
+
+            <table class="table table-striped">
+                <tr>
+                    <td>Tipo de documento</td>
+                    <td>
+                        <select class="form-control" id="tipoDocumento">
+                            <option>Cédula de ciudadanía</option>
+                            <option>Tarjeta de identidad</option>
+                            <option>NIT</option>
+                        </select>
+                    </td>
+                    <td>Número de documento</td>
+                    <td>
+                        <input type="text" class="form-control" id="númeroDocumento" />
+                    </td>
+
+                </tr>
+                <tr>
+                    <td>Primer nombre</td>
+                    <td><input type="text" class="form-control" id="primerNombre" />
+                    <td>Segundo nombre</td>
+                    <td><input type="text" class="form-control" id="primerNombre" />
+                </tr>
+                <tr>
+                    <td>Primer apellido</td>
+                    <td><input type="text" class="form-control" id="primerApellido" />
+                    <td>Segundo apellido</td>
+                    <td><input type="text" class="form-control" id="segundoApellido" />
+                </tr>
+                <tr>
+                    <td>Contraseña</td>
+                    <td><input type="password" class="form-control" id="Contraseña" />
+                    <td>Confirmar Contraseña</td>
+                    <td><input type="password" class="form-control" id="confirmarContraseña" /></td>
+
+
+                </tr>
+                <tr>
+                    <td>Sexo</td>
+                    <td>
+                        <select class="form-control" id="sexo">
+                            <option>Femenino</option>
+                            <option>Masculino</option>
+                        </select>
+
+                    <td>Correo Electrónico</td>
+                    <td><input type="text" class="form-control" id="correoElectronico" />
+
+                </tr>
+
+                <tr>                    
+                    <td>Teléfono Celular</td>
+                    <td><input type="text" class="form-control" id="telefonoCelular" /></td>
+
+                    <td>Teléfono Fijo</td>
+                    <td><input type="text" class="form-control" id="telefonoFijo" /></td>
+                </tr>
+                <tr>
+                    <td colspan="4" align="right">
+                        <input type="submit" value="Registrar" class="btn-primary" />
+                    </td>
+                </tr>
+            </table>
+        </form>
+
+    </div>
+</div>
+<script>
+    $('#dvFechaPedido').datepicker({
+        language: "es",
+        autoclose: true,
+        format: "dd/mm/yyyy",
+        todayHighlight: true
+    });
+
+</script>
