--- a/FlowersAndBushes/FlowersAndBushes/Views/Shared/_Layout.cshtml
+++ b/FlowersAndBushes/FlowersAndBushes/Views/Shared/_Layout.cshtml
@@ -7,8 +7,16 @@
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="~/Content/Estilos.css" />
+    <link rel="stylesheet" href="~/Content/bootstrap-datepicker3.min.css"/>
+    <script type="text/javascript" src="~/scripts/jquery-3.2.1.js"> </script>
+    <script type="text/javascript" src="~/scripts/bootstrap-datepicker.min.js"> </script>
+    <script type="text/javascript" src="~/scripts/bootstrap-datepicker.es.min.js"> </script>
 
-</head>
+
+    
+            
+         </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -35,6 +43,7 @@
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+            
         </footer>
     </div>
 
