--- a/FlowersAndBushes/FlowersAndBushes/Views/Shared/_Layout.cshtml
+++ b/FlowersAndBushes/FlowersAndBushes/Views/Shared/_Layout.cshtml
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
     <link rel="stylesheet" href="~/Content/Estilos.css" />
-    <link rel="stylesheet" href="~/Content/bootstrap-datepicker3.min.css"/>
-    <script type="text/javascript" src="~/scripts/jquery-3.2.1.js"> </script>
+    <link rel="stylesheet" href="~/Content/bootstrap-datepicker.min.css"/>
+    <script type="text/javascript" src="~/scripts/jquery-3.2.1.min.js"> </script>
     <script type="text/javascript" src="~/scripts/bootstrap-datepicker.min.js"> </script>
-    <script type="text/javascript" src="~/scripts/bootstrap-datepicker.es.min.js"> </script>
+    
 
 
     
@@ -26,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de aplicación", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Flowers And Bushes", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -47,8 +46,6 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
