--- a/FlowersAndBushes/FlowersAndBushes/Views/Shared/_Layout.cshtml
+++ b/FlowersAndBushes/FlowersAndBushes/Views/Shared/_Layout.cshtml
@@ -11,39 +11,89 @@
     <script type="text/javascript" src="~/scripts/jquery-3.2.1.min.js"> </script>
     <script type="text/javascript" src="~/scripts/bootstrap-datepicker.min.js"> </script>
     
+       <script>
+           $(document).ready(function () {
+               
+               var trigger = $('.hamburger'),
+                   overlay = $('.overlay'),
+                  isClosed = false;
 
+               trigger.click(function () {
+                   hamburger_cross();
+               });
+
+               function hamburger_cross() {
+                   if (isClosed == true) {
+                       overlay.hide();
+                       trigger.removeClass('is-open');
+                       trigger.addClass('is-closed');
+                       isClosed = false;
+                   } else {
+                       overlay.show();
+                       trigger.removeClass('is-closed');
+                       trigger.addClass('is-open');
+                       isClosed = true;
+                   }
+               }
+
+               $('[data-toggle="offcanvas"]').click(function () {
+                   $('#wrapper').toggleClass('toggled');
+               });
+           });
+
+       </script>
 
     
             
          </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Flowers And Bushes", "Index", "Home", null, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
+    <body>
+
+    <div id="wrapper">
+        <div class="overlay"></div>
+
+        <!-- Sidebar -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+            <ul class="nav sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                        Brand
+                    </a>
+                </li>
+                <li>
+                    @Html.ActionLink("Quienes Somos", "About", "Home") 
+                </li>
+                <li>
+                    @Html.ActionLink("Productos", "Index", "Productos") 
+                </li>
+                <li>
+                    @Html.ActionLink("Pedidos", "Crear", "Pedido") 
+                </li>
+                <li>
+                    @Html.ActionLink("Contactenos", "Contact", "Home") 
+                </li>
+                <li>
+                    @Html.ActionLink("Cerrar Sesion", "Crear", "Cliente") 
+                </li>
+            </ul>
+        </nav>
+        <!-- /#sidebar-wrapper -->
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <button type="button" class="hamburger is-closed" data-toggle="offcanvas">
+                <span class="hamb-top"></span>
+                <span class="hamb-middle"></span>
+                <span class="hamb-bottom"></span>
+            </button>
+            <div class="container body-content">
+                @RenderBody()
+                <hr />
+                <footer>
+                    <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+
+                </footer>
             </div>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
-            
-        </footer>
+        <!-- /#page-content-wrapper -->
     </div>
 
     @RenderSection("scripts", required: false)
